fix submodule urls

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,21 +1,21 @@
 [submodule "vim/bundle/nerdcommenter"]
 	path = vim/bundle/nerdcommenter
-	url = https://github.com/scrooloose/nerdcommenter.git
+	url = https://github.com/scrooloose/nerdcommenter
 [submodule "vim/bundle/sparkup"]
 	path = vim/bundle/sparkup
 	url = https://github.com/bingaman/vim-sparkup
 [submodule "vim/bundle/jade"]
 	path = vim/bundle/jade
-	url = https://github.com/vim-scripts/jadevim
+	url = https://github.com/vim-scripts/jade.vim
 [submodule "vim/bundle/pig"]
 	path = vim/bundle/pig
-	url = https://github.com/vim-scripts/pigvim
+	url = https://github.com/vim-scripts/pig.vim
 [submodule "vim/bundle/markdown"]
 	path = vim/bundle/markdown
 	url = https://github.com/tpope/vim-markdown
 [submodule "vim/bundle/bufkill"]
 	path = vim/bundle/bufkill
-	url = https://github.com/vim-scripts/bufkillvim
+	url = https://github.com/vim-scripts/bufkill.vim
 [submodule "vim/bundle/LustyExplorer"]
 	path = vim/bundle/LustyExplorer
 	url = https://github.com/vim-scripts/LustyExplorer
@@ -24,7 +24,7 @@
 	url = https://github.com/godlygeek/csapprox
 [submodule "vim/bundle/ack"]
 	path = vim/bundle/ack
-	url = https://github.com/mileszs/ackvim
+	url = https://github.com/mileszs/ack.vim
 [submodule "vim/bundle/surround"]
 	path = vim/bundle/surround
 	url = https://github.com/tpope/vim-surround
