--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "vim/bundle/clojure"]
 	path = vim/bundle/clojure
 	url = https://github.com/vim-scripts/VimClojure
+[submodule "oh-my-zsh"]
+	path = oh-my-zsh
+	url = git@github.com:thegreatape/oh-my-zsh
