Initial tmux customization (h/t @semanticart for most of this).

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,1 +1,36 @@
+# remap prefix to Control + a
+set -g prefix C-a
+unbind C-b
+bind C-a send-prefix
+
+# fix insert mode exit lag in vim
 set -sg escape-time 0
+
+# allow mouse scrolling
+set -g mode-mouse on
+
+# force a reload of the config file
+unbind r
+bind r source-file ~/.tmux.conf
+
+# act like vim
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# split windows evenly like vim
+bind v split-window -h
+bind s split-window -v
+
+# 25%, horizontal
+unbind T
+bind T split-window -p 25
+
+# 35%, vertical
+unbind t
+bind t split-window -p 35 -h
+
+# 1%, horizontal
+unbind Y
+bind Y split-window -p 1
