Window zooming in tmux.

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,12 @@ set -g mode-mouse on
 unbind r
 bind r source-file ~/.tmux.conf
 
+# window zooming
+unbind =
+bind = new-window -d -n tmux-zoom \; swap-pane -s tmux-zoom.0 \; select-window -t tmux-zoom
+unbind -
+bind - last-window \; swap-pane -s tmux-zoom.0 \; kill-window -t tmux-zoom
+
 # act like vim
 bind h select-pane -L
 bind j select-pane -D
