Tmux updates - easier commands for window resizing, start index from 1 on window list, display message when reloading config.

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,12 +6,16 @@ bind C-a send-prefix
 # fix insert mode exit lag in vim
 set -sg escape-time 0
 
+# start window indexing from 1
+set -g base-index 1
+setw -g pane-base-index 1
+
 # allow mouse scrolling
 set -g mode-mouse on
 
 # force a reload of the config file
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf; display "Tmux config reloaded."
 
 # window zooming
 unbind =
@@ -28,6 +32,12 @@ bind l select-pane -R
 # split windows evenly like vim
 bind v split-window -h
 bind s split-window -v
+
+# resizing windows
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
 
 # 25%, horizontal
 unbind T
