More tmux updates - copy and paste with system clipboard, use vim keys. Use tmuxinator.

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,11 +23,20 @@ bind = new-window -d -n tmux-zoom \; swap-pane -s tmux-zoom.0 \; select-window -
 unbind -
 bind - last-window \; swap-pane -s tmux-zoom.0 \; kill-window -t tmux-zoom
 
-# act like vim
+# move like vim
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# cut and paste like vim
+setw -g mode-keys vi
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
 
 # split windows evenly like vim
 bind v split-window -h
@@ -50,3 +59,7 @@ bind t split-window -p 35 -h
 # 1%, horizontal
 unbind Y
 bind Y split-window -p 1
+
+# reattach to user namespace for clipboard sharing
+set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
