Longer tmux scrollback buffer.

--- a/tmux.conf
+++ b/tmux.conf
@@ -63,3 +63,6 @@ bind Y split-window -p 1
 # reattach to user namespace for clipboard sharing
 set -g default-command "reattach-to-user-namespace -l /bin/zsh"
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+
+# longer scrollback buffer
+set-option -g history-limit 10000
