--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "vim/bundle/ctrl-p"]
 	path = vim/bundle/ctrl-p
 	url = https://github.com/kien/ctrlp.vim.git
+[submodule "vim/bundle/autotag"]
+	path = vim/bundle/autotag
+	url = https://github.com/vim-scripts/AutoTag
