Switch to Vundle and remove some unused plugins.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,78 +1,6 @@
-[submodule "vim/bundle/nerdcommenter"]
-	path = vim/bundle/nerdcommenter
-	url = https://github.com/scrooloose/nerdcommenter
-[submodule "vim/bundle/sparkup"]
-	path = vim/bundle/sparkup
-	url = https://github.com/bingaman/vim-sparkup
-[submodule "vim/bundle/jade"]
-	path = vim/bundle/jade
-	url = https://github.com/vim-scripts/jade.vim
-[submodule "vim/bundle/pig"]
-	path = vim/bundle/pig
-	url = https://github.com/vim-scripts/pig.vim
-[submodule "vim/bundle/markdown"]
-	path = vim/bundle/markdown
-	url = https://github.com/tpope/vim-markdown
-[submodule "vim/bundle/bufkill"]
-	path = vim/bundle/bufkill
-	url = https://github.com/vim-scripts/bufkill.vim
-[submodule "vim/bundle/csapprox"]
-	path = vim/bundle/csapprox
-	url = https://github.com/godlygeek/csapprox
-[submodule "vim/bundle/ack"]
-	path = vim/bundle/ack
-	url = https://github.com/mileszs/ack.vim
-[submodule "vim/bundle/surround"]
-	path = vim/bundle/surround
-	url = https://github.com/tpope/vim-surround
-[submodule "vim/bundle/mustache"]
-	path = vim/bundle/mustache
-	url = https://github.com/juvenn/mustache.vim
-[submodule "vim/bundle/javascript"]
-	path = vim/bundle/javascript
-	url = https://github.com/pangloss/vim-javascript
-[submodule "vim/bundle/jshint"]
-	path = vim/bundle/jshint
-	url = https://github.com/wookiehangover/jshint.vim
-[submodule "vim/bundle/rails"]
-	path = vim/bundle/rails
-	url = https://github.com/tpope/vim-rails
-[submodule "vim/bundle/fugitive"]
-	path = vim/bundle/fugitive
-	url = https://github.com/tpope/vim-fugitive
-[submodule "vim/bundle/ruby"]
-	path = vim/bundle/ruby
-	url = https://github.com/vim-ruby/vim-ruby
-[submodule "vim/bundle/matchit"]
-	path = vim/bundle/matchit
-	url = https://github.com/tsaleh/vim-matchit
-[submodule "vim/bundle/zoomwin"]
-	path = vim/bundle/zoomwin
-	url = https://github.com/vim-scripts/ZoomWin
-[submodule "vim/bundle/coffee-script"]
-	path = vim/bundle/coffee-script
-	url = https://github.com/kchmck/vim-coffee-script.git
-[submodule "nvm"]
-	path = nvm
-	url = git://github.com/creationix/nvm.git
-[submodule "vim/bundle/taglist"]
-	path = vim/bundle/taglist
-	url = https://github.com/vim-scripts/taglist.vim
-[submodule "vim/bundle/prolog"]
-	path = vim/bundle/prolog
-	url = https://github.com/adimit/prolog.vim.git
-[submodule "vim/bundle/clojure"]
-	path = vim/bundle/clojure
-	url = https://github.com/vim-scripts/VimClojure
 [submodule "oh-my-zsh"]
 	path = oh-my-zsh
 	url = git@github.com:thegreatape/oh-my-zsh
-[submodule "vim/bundle/tabular"]
-	path = vim/bundle/tabular
-	url = https://github.com/godlygeek/tabular.git
-[submodule "vim/bundle/ctrl-p"]
-	path = vim/bundle/ctrl-p
-	url = https://github.com/kien/ctrlp.vim.git
-[submodule "vim/bundle/autotag"]
-	path = vim/bundle/autotag
-	url = https://github.com/vim-scripts/AutoTag
+[submodule "vim/bundle/vundle"]
+	path = vim/bundle/vundle
+	url = https://github.com/gmarik/vundle.git
