--- a/tmux.conf
+++ b/tmux.conf
@@ -17,11 +17,12 @@ set -g mode-mouse on
 unbind r
 bind r source-file ~/.tmux.conf; display "Tmux config reloaded."
 
-# move like vim
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# smart pane switching with awareness of vim splits
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # cut and paste like vim
 setw -g mode-keys vi
@@ -52,9 +53,8 @@ bind t split-window -p 35 -h
 unbind Y
 bind Y split-window -p 1
 
-# reattach to user namespace for clipboard sharing
-set -g default-command "reattach-to-user-namespace -l /bin/zsh"
-bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe 'reattach-to-user-namespace pbcopy'
 
 # longer scrollback buffer
 set-option -g history-limit 10000
