--- a/tmux.conf
+++ b/tmux.conf
@@ -53,8 +53,11 @@ bind t split-window -p 35 -h
 unbind Y
 bind Y split-window -p 1
 
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe 'reattach-to-user-namespace pbcopy'
 
 # longer scrollback buffer
 set-option -g history-limit 10000
+
