Fix copying to system clipboard in tmux.

--- a/tmux.conf
+++ b/tmux.conf
@@ -28,8 +28,14 @@ bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 setw -g mode-keys vi
 unbind p
 bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # split windows evenly like vim
 bind v split-window -h
@@ -52,11 +58,6 @@ bind t split-window -p 35 -h
 # 1%, horizontal
 unbind Y
 bind Y split-window -p 1
-
-set-option -g default-command "reattach-to-user-namespace -l $SHELL"
-
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe 'reattach-to-user-namespace pbcopy'
 
 # longer scrollback buffer
 set-option -g history-limit 10000
