Misc updates and poor commit messages.

--- a/tmux.conf
+++ b/tmux.conf
@@ -62,3 +62,5 @@ bind Y split-window -p 1
 # longer scrollback buffer
 set-option -g history-limit 10000
 
+# needed for tmux
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
