Update to account for new tmux default of not using current directory in new panel.

--- a/tmux.conf
+++ b/tmux.conf
@@ -38,8 +38,8 @@ unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # split windows evenly like vim
-bind v split-window -h
-bind s split-window -v
+bind v split-window -h -c '#{pane_current_path}'
+bind s split-window -v -c '#{pane_current_path}'
 
 # resizing windows
 bind -r H resize-pane -L 5
