Add tmux reloading back, apparently I do use in once in a blue moon.

--- a/tmux.conf
+++ b/tmux.conf
@@ -37,6 +37,10 @@ bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 bind v split-window -h -c '#{pane_current_path}'
 bind s split-window -v -c '#{pane_current_path}'
 
+# force a reload of the config file
+unbind r
+bind r source-file ~/.tmux.conf; display "Tmux config reloaded."
+
 # resizing windows
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
