Simple date / time in tmux statusbar.

--- a/tmux.conf
+++ b/tmux.conf
@@ -61,6 +61,10 @@ set-option -g history-limit 10000
 
 # needed for tmux
 set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+
+# show simple time / date in right statusbar
+set -g status-right '%l:%M %p | %h %d %Y '
+
 #### COLOUR (Solarized 256)
 
 # default statusbar colors
