set tmux window titles to CWD base path

--- a/tmux.conf
+++ b/tmux.conf
@@ -65,6 +65,11 @@ set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 # show simple time / date in right statusbar
 set -g status-right '%l:%M %p | %h %d %Y '
 
+# show current path as window title
+set-option -g status-interval 5
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}'
+
 #### COLOUR (Solarized 256)
 
 # default statusbar colors
