Enable ctrl-arrow cursor movement in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -70,6 +70,9 @@ set-option -g status-interval 5
 set-option -g automatic-rename on
 set-option -g automatic-rename-format '#{b:pane_current_path}'
 
+# enabled ctrl-arrow cursor movement
+set-window-option -g xterm-keys on
+
 #### COLOUR (Solarized 256)
 
 # default statusbar colors
