--- a/tmux.conf
+++ b/tmux.conf
@@ -15,7 +15,7 @@ bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq '
 bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq 'emacs\\|vim' && tmux send-keys C-j) || tmux select-pane -D"
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq 'emacs\\|vim' && tmux send-keys C-k) || tmux select-pane -U"
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq 'emacs\\|vim' && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq 'emacs\\|vim' && tmux send-keys 'C-\\') || tmux select-pane -l"
+bind -n 'C-\' run "(tmux display-message -p '#{pane_current_command}' | grep -iq 'emacs\\|vim' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # cut and paste like vim
 setw -g mode-keys vi
@@ -76,27 +76,20 @@ set-window-option -g xterm-keys on
 #### COLOUR (Solarized 256)
 
 # default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
+set-option -g status-style bg=colour235,fg=colour136,default
 
 # default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
+set-window-option -g window-status-style fg=colour244,bg=default
 
 # active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-style fg=colour166,bg=default
 
 # pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+set-option -g pane-border-style fg=colour235 #base02
+set-option -g pane-active-border-style fg=colour240 #base01
 
 # message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
+set-option -g message-style bg=colour235,fg=colour166
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
